k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopsys
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopsys
  template:
    metadata:
      labels:
        app: shopsys
    spec:
      containers:
        - name: nginx
          image: $DOCKER_IMAGE
          ports:
            - name: http
              containerPort: 80
