k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: shopsys
spec:
  type: NodePort
  selector:
    app: shopsys
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
