k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shopsys
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "ingress"
spec:
  rules:
  - host: $HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: shopsys
          servicePort: 80
